// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add 1`] = `
NodeList [
  102,
  102,
  102,
]
`;

exports[`init-function 1`] = `
NodeList [
  102,
  102,
  102,
]
`;

exports[`initData-normal 1`] = `
NodeList [
  100,
  100,
  100,
]
`;

exports[`initData-undefined 1`] = `
NodeList [
  undefined,
  undefined,
  undefined,
]
`;

exports[`reducer 1`] = `
NodeList [
  103,
  103,
  103,
]
`;

exports[`selector 1`] = `
NodeList [
  11,
  21,
  32,
]
`;

exports[`useEffect 1`] = `
NodeList [
  Effect,
  Effect,
  Effect,
]
`;
